# TAKEN

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: DEFENSE_PLAYBOOK.md  SCOPE.md
taken/: __init__.py  __main__.py  cli.py  footprint.py  metadata.py  opsec.py  report.py  resources.py  snowflake.py
tests/: test_content.py  test_footprint.py  test_snowflake.py
